<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/matrixBlack"
    tools:context=".Login">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginTop="30dp"
        android:background="@android:color/transparent"
        android:src="@drawable/icon"
        android:layout_centerHorizontal="true"/>

    <EditText
        android:id="@+id/editTextEmailLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@id/editTextPasswordLogin"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:padding="6dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        android:textColor="@color/matrixBlack"
        android:textColorHint="@color/matrixGray"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <EditText
        android:id="@+id/editTextPasswordLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_marginStart="10dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="16dp"
        android:padding="6dp"
        android:background="@drawable/edit_text_background"
        android:hint="@string/pass"
        android:inputType="textPassword"
        android:minHeight="48dp"
        android:textColor="@color/matrixBlack"
        android:textColorHint="@color/matrixGray"
        android:textStyle="bold"
        tools:ignore="LabelFor" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:background="@drawable/curved_button_background_green"
        android:text="@string/login"
        android:textColor="@color/matrixBlack"
        android:layout_below="@id/editTextPasswordLogin"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dont_have"
        android:layout_above="@id/buttonRegister"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="6dp"
        android:textColor="@color/matrixGreen"
        android:textStyle="bold"
        android:background="@color/matrixBlack"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonRegister"
        android:layout_width="180dp"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:background="@drawable/curved_button_background_green"
        android:text="@string/register"
        android:layout_marginBottom="30dp"
        android:textColor="@color/matrixBlack"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"/>

</RelativeLayout>