<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/matrixBlack"
    android:padding="10dp">

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true" />

    <ImageView
        android:id="@+id/matrixIcon"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:src="@drawable/icon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="32dp"
        android:importantForAccessibility="no" />

    <TextView
        android:id="@+id/settingsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings_title"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/matrixGreen"
        android:layout_below="@id/matrixIcon"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/toggleMusicSwitch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/settingsTitle"
        android:layout_centerHorizontal="false"
        android:layout_marginTop="16dp"
        android:checked="true"
        android:minHeight="48dp"
        android:text="@string/toggle_music"
        android:textColor="@color/matrixGreen"
        android:thumbTint="@color/matrixGreen"
        android:trackTint="@color/matrixBlue" />

    <SeekBar
        android:id="@+id/volumeSeekBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/toggleMusicSwitch"
        android:layout_marginTop="16dp"
        android:max="100"
        android:progress="50"
        android:thumbTint="@color/matrixGreen"
        android:progressTint="@color/matrixGreen" />

    <!-- Added Language Setting -->
    <TextView
        android:id="@+id/languageText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/change_language"
        android:textSize="18sp"
        android:textColor="@color/matrixGreen"
        android:layout_below="@id/volumeSeekBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"/>

    <RadioGroup
        android:id="@+id/languageRadioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/languageText"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="8dp">

        <RadioButton
            android:id="@+id/bahasaRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/bahasa_indonesia"
            android:buttonTint="@color/matrixGreen"
            android:textColor="@color/matrixGreen" />

        <RadioButton
            android:id="@+id/englishRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/english"
            android:buttonTint="@color/matrixGreen"
            android:textColor="@color/matrixGreen" />

        <RadioButton
            android:id="@+id/japanRadioButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="48dp"
            android:text="@string/japanese"
            android:buttonTint="@color/matrixGreen"
            android:textColor="@color/matrixGreen"/>

        <!-- You can add more language options if needed -->

    </RadioGroup>
    <!-- End of Language Setting -->

    <!-- Rating Tittle -->
    <TextView
        android:id="@+id/rating_txt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/rating_txt"
        android:layout_below="@id/languageRadioGroup"
        android:layout_centerHorizontal="true"
        android:textColor="@color/matrixGreen"
        android:textStyle="bold"
    />

    <!-- Added RatingBar -->
    <RatingBar
        android:id="@+id/ratingBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/rating_txt"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:numStars="5"
        android:rating="3.5"
        android:stepSize="0.5"
        android:progressTint="@color/matrixGreen"
        android:progressBackgroundTint="@color/matrixGray"/>
    <!-- End of RatingBar -->
    <Spinner
        android:id="@+id/matrixSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ratingBar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="16dp"
        android:background="@drawable/spinner_background"
        android:entries="@array/matrix_options"
        android:minHeight="48dp"
        android:spinnerMode="dropdown" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/spinnerButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/matrixSpinner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:textStyle="bold"
        android:background="@drawable/curved_button_background_green"
        android:minHeight="48dp"
        android:text="Apply" />
    <!-- Feel free to add more UI elements as needed -->
</RelativeLayout>