<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/matrixBlack"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Matrix-themed banner or logo -->
    <ImageView
        android:id="@+id/aboutBanner"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/banner1"
        android:scaleType="centerCrop"
        tools:ignore="ContentDescription" />

    <VideoView
        android:id="@+id/videoView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:layout_below="@+id/aboutBanner"/>

    <!-- Your Photo -->
    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/yourPhoto"
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_below="@id/aboutBanner"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="-50dp"
        android:scaleType="centerCrop"
        android:src="@drawable/photo"
        app:civ_border_color="@color/matrixGreen"
        app:civ_border_width="2dp" />

    <!-- About text -->
    <TextView
        android:id="@+id/aboutText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourPhoto"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/abt_txt"
        android:textColor="#00FF00"
        android:textSize="16sp"/>

    <!-- Your Personal Information -->
    <TextView
        android:id="@+id/yourInfo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutText"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/abt_info"
        android:textColor="#00FF00"
        android:textSize="14sp"/>

    <!-- Additional information or features -->
    <TextView
        android:id="@+id/aboutDetails"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/yourInfo"
        android:layout_marginTop="20dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="15dp"
        android:text="@string/abt_ver"
        android:textColor="#00FF00"
        android:textSize="14sp"/>

    <!-- Matrix-themed buttons or icons for additional actions -->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/backButton"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/aboutDetails"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:padding="6dp"
        android:background="@drawable/curved_button_background_green"
        android:text="@string/back"
        android:textColor="#000000"
        android:textStyle="bold" />

    <!-- You can add more elements like icons, animations, or themed decorations here -->

</RelativeLayout>